--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ header .navegacao ul {
     gap: 20px;
 }
 
+header .navegacao a {
+    color: black;
+    text-decoration: none;
+}
+
 header .navegacao button {
     background: none;
     border: none;
